deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codepuke
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: codepuke
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
